a5final(vue_problem)

--- a/emqx/data/configs/app.2025.11.08.22.56.55.config
+++ b/emqx/data/configs/app.2025.11.08.22.56.55.config
@@ -48,7 +48,7 @@
      [{data_dir,"data"},
       {local_override_conf_file,"data/configs/local-override.conf"},
       {cluster_override_conf_file,"data/configs/cluster-override.conf"},
-      {config_files,["c:/Users/Lenovo/Desktop/sjk/emqx/etc/emqx.conf"]}]},
+      {config_files,["d:/code9/class2down/class2up/emqx/etc/emqx.conf"]}]},
  {kernel,
      [{error_logger,silent},
       {logger,
